# 2d-renderer

./: CMakeLists.txt
include/2d_renderer/: renderer.h
src/: common.c  native.cc  web.c
